--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 
-spring.rabbitmq.host = 127.0.0.1
-spring.rabbitmq.port = 5672
-spring.rabbitmq.username = guest
-spring.rabbitmq.password = guest
+#spring.rabbitmq.host = 127.0.0.1
+#spring.rabbitmq.port = 5672
+#spring.rabbitmq.username = guest
+#spring.rabbitmq.password = guest
+
+spring.rabbitmq.host = owl.rmq.cloudamqp.com
+spring.rabbitmq.port = 8883 
+spring.rabbitmq.username = bcudkwjk
+spring.rabbitmq.password = jzlmUGuI4fHbpHo2zz7GrKmX7iGCSMIr
