--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,18 @@
 	 <dependency>
 	  <groupId>org.apache.logging.log4j</groupId>
 	  <artifactId>log4j-api</artifactId>
-	  <version>2.12.0</version>
 	  <type>jar</type>
 	 </dependency>
+	 
+<dependency>
+<groupId>org.postgresql</groupId>
+<artifactId>postgresql</artifactId>
+<scope>runtime</scope>
+</dependency>
+<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
