--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,13 @@
 	 
 <dependency>
 <groupId>org.postgresql</groupId>
-<artifactId>postgresql</artifactId>
-<scope>runtime</scope>
+    <artifactId>postgresql</artifactId>
+    <scope>runtime</scope>
 </dependency>
 <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <scope>provided</scope>
         </dependency>
 	</dependencies>
 
@@ -86,7 +87,7 @@
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
 			<url>https://repo.spring.io/milestone</url>
-		</pluginRepository>
-	</pluginRepositories>
+		</pluginRepository>	</pluginRepositories>
+
 
 </project>
