Http comunication, models, dto, converters, logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
+spring.datasource.platform=postgresql
+spring.datasource.data=classpath:/data-postgres.sql
+spring.datasource.maxActive=1
+spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto = create-drop
