--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,19 @@
 	  <artifactId>log4j-api</artifactId>
 	  <type>jar</type>
 	 </dependency>
-	 
+	
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.18.12</version>
+
+	</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.5</version>
+		</dependency>
+
 <dependency>
 <groupId>org.postgresql</groupId>
     <artifactId>postgresql</artifactId>
