--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.datasource.data=classpath:/data-postgres.sql
 spring.datasource.maxActive=1
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto = create-drop
+jasypt.encryptor.password =snmp
+jasypt.encryptor.algorithm= PBEWITHMD5ANDDES
+
+spring.profiles.active=development
