--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <tomcat.version>9.0.29</tomcat.version>
     </properties>
 
     <dependencies>
@@ -43,6 +44,11 @@
             <artifactId>java-jwt</artifactId>
             <version>3.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
