java version changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.jpa.hibernate.ddl-auto=create
 jasypt.encryptor.password=snmp
 jasypt.encryptor.algorithm=PBEWITHMD5ANDDES
 spring.profiles.active=development
+java.runtime.version=11
