--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.platform=postgresql
 spring.datasource.data=classpath:/data-postgres.sql
 spring.datasource.maxActive=2
 spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 jasypt.encryptor.password=snmp
 jasypt.encryptor.algorithm=PBEWITHMD5ANDDES
 spring.profiles.active=development
